[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mkk-basis-test"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13,<2.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "faststream[rabbit]>=0.7,<0.8",
    "httpx>=0.27,<1.0",
    "pydantic-settings>=2.4,<3.0",
    "SQLAlchemy[asyncio]>=2.0,<3.0",
    "sqlmodel>=0.0.22,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.scripts]
payments-consumer = "main:run_consumer"

[tool.setuptools]
py-modules = ["config", "main"]

[tool.setuptools.packages.find]
include = ["common*", "routes*", "services*"]
